# dqn_qlearning_sarsa_mobile_robot_navigation

./: README.md
my_turtlebot3_training/: CMakeLists.txt  package.xml
my_turtlebot3_training/config/: turtlebot3_openai_dqlearn_params.yaml  turtlebot3_openai_qlearn_params.yaml  turtlebot3_openai_sarsa_params.yaml
my_turtlebot3_training/launch/: start_dqlearn_testing.launch  start_dqlearn_training.launch  start_qlearn_testing.launch  start_qlearn_training.launch  start_sarsa_testing.launch  start_sarsa_training.launch
my_turtlebot3_training/src/: deepq.py  memory.py  qlearn.py  sarsa.py  start_dqlearn_testing.py  start_dqlearn_training.py  start_qlearn_testing.py  start_qlearn_training.py  start_sarsa_testing.py  start_sarsa_training.py  utils.py
openai_projects/turtle3_openai_ros_example/: CMakeLists.txt  package.xml
openai_projects/turtle3_openai_ros_example/testing_results/dqlearn/: turtle_c2_dqn_ep1500.h5  turtle_c2_dqn_ep1500.json  turtlebot3_stage_2.csv
openai_projects/turtle3_openai_ros_example/testing_results/qlearn/: qlearn_qtable.txt
openai_projects/turtle3_openai_ros_example/testing_results/sarsa/: sarsa_qtable.txt
openai_projects/turtle3_openai_ros_example/training_results/dqlearn/: turtlebot3_stage_2.csv
openai_projects/turtle3_openai_ros_example/training_results/qlearn/: turtlebot3_stage_2.csv
openai_projects/turtle3_openai_ros_example/training_results/sarsa/: turtlebot3_stage_2.csv
turtlebot3_rl/: CMakeLists.txt  package.xml
turtlebot3_rl/launch/: deploy_turtlebot3.launch
turtlebot3_rl/msg/: Float.msg
turtlebot3_rl/src/: utils.py  (+5 more)
(+15 files in other folders)
