<?xml version="1.0"?>
<package format="2">
  <name>turtle3_openai_ros_example</name>
  <version>0.0.0</version>
  <description>The turtle3_openai_ros_example package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zero@todo.todo">Zero</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openai_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>openai_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>openai_ros</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
